--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
 	"name": "djs-message-commands",
 	"version": "1.0.0",
-	"description": "A package for discord.js to facilitate building and validating message commands.",
+	"description": "Build easy, safe, and testable message commands for discord.js",
 	"main": "index.js",
 	"types": "index.d.ts",
 	"scripts": {
+		"docs:dev": "vuepress dev docs",
+		"docs:build": "vuepress build docs",
 		"test": "jest --watch"
 	},
 	"author": "shockch4rge",
@@ -16,12 +18,15 @@
 		"@types/jest": "^27.4.1",
 		"jest": "^27.5.1",
 		"ts-jest": "^27.1.3",
-		"typescript": "^4.6.2"
+		"typescript": "^4.6.2",
+		"vuepress": "^1.9.7"
 	},
 	"keywords": [
+		"discord",
 		"discord.js",
 		"message",
 		"command",
-		"commands"
+		"commands",
+		"utility"
 	]
 }
