--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 		"target": "esnext",
 		"allowSyntheticDefaultImports": true,
 		"forceConsistentCasingInFileNames": true,
-    "declaration": true,
+    	"declaration": true,
 		"module": "commonjs",
 		"moduleResolution": "node",
 		"esModuleInterop": true,
@@ -21,5 +21,5 @@
 		"experimentalDecorators": true,
 		"outDir": "./dist"
 	},
-	"exclude": ["**/*.spec.*"]
+	"exclude": ["**/*.spec.*", "jest.config.js"]
 }
