--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
 		"experimentalDecorators": true,
 		"outDir": "./dist"
 	},
-	"exclude": ["**/*.spec.*", "jest.config.js"]
+	"exclude": ["**/*.spec.*", "jest.config.js", "**/dist/**", "**/discord/**", "**/node_modules/**"],
 }
