--- a/package.json
+++ b/package.json
@@ -2,15 +2,29 @@
 	"name": "djs-message-commands",
 	"version": "1.0.0",
 	"description": "Build easy, safe, and testable message commands for discord.js",
-	"main": "index.js",
-	"types": "index.d.ts",
+	"main": "./dist/index.js",
+	"types": "./dist/index.d.ts",
 	"scripts": {
+		"build": "tsc ./src/*.ts",
 		"docs:dev": "vuepress dev docs",
 		"docs:build": "vuepress build docs",
 		"test": "jest --watch"
 	},
-	"author": "shockch4rge",
-	"license": "ISC",
+	"files": [
+		"dist",
+		"LICENSE",
+		"README.md"
+	],
+	"keywords": [
+		"discord",
+		"discord.js",
+		"message",
+		"command",
+		"commands",
+		"utility"
+	],
+	"author": "Shockch4rge",
+	"license": "MIT",
 	"dependencies": {
 		"discord.js": "^13.6.0"
 	},
@@ -20,13 +34,5 @@
 		"ts-jest": "^27.1.3",
 		"typescript": "^4.6.2",
 		"vuepress": "^1.9.7"
-	},
-	"keywords": [
-		"discord",
-		"discord.js",
-		"message",
-		"command",
-		"commands",
-		"utility"
-	]
+	}
 }
