--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build": "tsc ./src/*.ts",
 		"docs:dev": "vuepress dev docs",
 		"docs:build": "vuepress build docs",
-		"test": "jest --watch"
+		"test": "jest"
 	},
 	"files": [
 		"dist",
