--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
 		"jest": "^27.5.1",
 		"ts-jest": "^27.1.3",
 		"typescript": "^4.6.2",
-		"vuepress": "^1.9.7"
+		"vuepress": "^2.0.0-beta.36"
 	}
 }
