--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,6 @@
 		"experimentalDecorators": true,
 		"outDir": "./dist"
 	},
+	"include": ["src/**/*.ts"],
 	"exclude": ["**/*.spec.*", "jest.config.js", "**/dist/**", "**/discord/**", "**/node_modules/**"]
 }
