--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"docs:dev": "vuepress dev docs",
 		"docs:build": "vuepress build docs",
 		"docs:deploy": "npm run docs:build && npx gh-pages -d docs/.vuepress/dist",
-		"test": "jest"
+		"test": "jest --watch"
 	},
 	"files": [
 		"dist",
@@ -35,8 +35,8 @@
 		"discord.js": "^14.5.0"
 	},
 	"devDependencies": {
-		"@types/jest": "^29.0.3",
-		"jest": "^29.0.3",
+		"@types/jest": "^27.5.1",
+		"jest": "^27.5.1",
 		"ts-jest": "^27.1.3",
 		"typescript": "^4.8.3",
 		"vuepress": "^2.0.0-beta.36"
