--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
 	"author": "Shockch4rge",
 	"license": "MIT",
 	"dependencies": {
-		"discord.js": "^14.5.0"
+		"discord.js": "^14.5.0",
+		"to-regex-range": "^5.0.1"
 	},
 	"devDependencies": {
 		"@types/jest": "^27.5.1",
+		"@types/to-regex-range": "^5.0.0",
 		"jest": "^27.5.1",
 		"ts-jest": "^27.1.3",
 		"typescript": "^4.8.3",
